Translated books page

--- a/index.html
+++ b/index.html
@@ -18,14 +18,39 @@
     <ul class="nav navbar-nav">
         <li><a href="index.html" class="navbar-brand">
             <img src="logo.png" style="width: 30px; height: 30px"></a></li>
-        <li class="active"><a href="index.html">All Books</a></li>
+        <li class="active"><a href="index.html">Translated Books</a></li>
         <li><a href="upload.html">Upload Book</a></li>
 </nav>
 <div class="container">
-    <h1>Work-in-Progress</h1>
+    <h1></h1>
 
+    <div class="list-group">
+        <div href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Book title #1 goes here</h5>
+                <small>Book Author</small>
+            </div>
+            <br>
+            <a href="#">English</a> | <a href="#">Spanish</a>
+        </div>
 
-
+        <div href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Book title #2 goes here</h5>
+                <small>Book Author</small>
+            </div>
+            <br>
+            <a href="#">English</a> | <a href="#">Spanish</a>
+        </div>
+        <div href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Book title #3 goes here</h5>
+                <small>Book Author</small>
+            </div>
+            <br>
+            <a href="#">English</a> | <a href="#">Spanish</a>
+        </div>
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
