--- a/upload.html
+++ b/upload.html
@@ -18,7 +18,7 @@
   <ul class="nav navbar-nav">
   <li><a href="index.html" class="navbar-brand">
     <img src="logo.png" style="width: 30px; height: 30px"></a></li>
-  <li><a href="index.html">All Books</a></li>
+  <li><a href="index.html">Translated Books</a></li>
   <li class="active"><a href="upload.html">Upload Book</a></li>
 </nav>
 <div class="container">
