JavaScript / read functionality

--- a/upload.html
+++ b/upload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Contact info for Todo App</title>
+    <title>Book Translator Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -11,7 +11,7 @@
       <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
       <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
     <![endif]-->
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
