--- a/book.html
+++ b/book.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Book Translator Demo</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -12,21 +11,21 @@
     <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
     <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
     <![endif]-->
-
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <ul class="nav navbar-nav">
         <li><a href="index.html" class="navbar-brand">
             <img src="logo.png" style="width: 30px; height: 30px"></a></li>
-        <li class="active"><a href="index.html">Translated Books</a></li>
+        <li><a href="index.html">Translated Books</a></li>
         <li><a href="upload.html">Upload Book</a></li>
 </nav>
-
 <div class="container">
-    <h1></h1>
 
-    <div id="translated-books" class="list-group"></div>
+    <h1 id="book-title"></h1>
+    <h5 id="book-author" style="text-align: center; padding-bottom: 30px; margin-top: -20px;"></h5>
+
+    <p id="book-text"></p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
@@ -39,6 +38,17 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
     </script>
-    <script charset="utf-8" src="script/index.js"></script>
+    <style>
+        .container p {
+            -webkit-column-count: 2;
+            -moz-column-count: 2;
+            column-count: 2;
+
+            -webkit-column-gap: 20px;
+            -moz-column-gap: 20px;
+            column-gap: 20px;
+        }
+    </style>
+    <script src="script/book.js"></script>
 </body>
 </html>
