--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 <div class="container">
     <h1></h1>
 
+    <div id="success-message" class="alert alert-success" role="alert" style="display: none">
+        Successfully uploaded book. It is currently pending translation.
+    </div>
+
     <div id="translated-books" class="list-group"></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
