remove upload book page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="index.html" class="navbar-brand">
             <img src="logo.png" style="width: 30px; height: 30px"></a></li>
         <li class="active"><a href="index.html">Translated Books</a></li>
-        <li><a href="upload.html">Upload Book</a></li>
+<!--        <li><a href="upload.html">Upload Book</a></li>-->
 </nav>
 
 <div class="container">
